@@ -3,6 +3,7 @@ This this the changelog file for the Pothos GUI toolkit.
 Release 0.5.0 (pending)
 ==========================
 
+- Finer grained connection management in Topology evaluator
 - Support for querying and applying block description overlays
 
 Release 0.4.4 (pending)
